force-app/main/default/objects/Exotel_Call_Summary__c/Exotel_Call_Summary__c.object-meta.xml
<CustomObject>
    <label>Exotel Call Summary</label>
    <nameField>
        <displayFormat>ECS-{0000}</displayFormat>
        <label>Exotel Call Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exotel Call Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>