force-app/main/default/objects/Exotel_Call_Summary__c/fields/CallFrom__c.field-meta.xml
<CustomField>
    <fullName>CallFrom__c</fullName>
    <label>CallFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>