force-app/main/default/objects/Exotel_Call_Summary__c/fields/CallSid__c.field-meta.xml
<CustomField>
    <fullName>CallSid__c</fullName>
    <externalId>true</externalId>
    <label>CallSid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>