force-app/main/default/objects/Exotel_Call_Summary__c/fields/CallTo__c.field-meta.xml
<CustomField>
    <fullName>CallTo__c</fullName>
    <label>CallTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>