force-app/main/default/objects/Exotel_Call_Summary__c/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <label>CallType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>