force-app/main/default/objects/Exotel_Call_Summary__c/fields/CurrentTime__c.field-meta.xml
<CustomField>
    <fullName>CurrentTime__c</fullName>
    <label>CurrentTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>