force-app/main/default/objects/Exotel_Call_Summary__c/fields/DialCallDuration__c.field-meta.xml
<CustomField>
    <fullName>DialCallDuration__c</fullName>
    <label>DialCallDuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>