force-app/main/default/objects/Exotel_Call_Summary__c/fields/DialCallStatus__c.field-meta.xml
<CustomField>
    <fullName>DialCallStatus__c</fullName>
    <label>DialCallStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>