force-app/main/default/objects/Exotel_Call_Summary__c/fields/DialWhomNumber__c.field-meta.xml
<CustomField>
    <fullName>DialWhomNumber__c</fullName>
    <label>DialWhomNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>