force-app/main/default/objects/Exotel_Call_Summary__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>