force-app/main/default/objects/Exotel_Call_Summary__c/fields/Exotel_Callout__c.field-meta.xml
<CustomField>
    <fullName>Exotel_Callout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exotel Callout</label>
    <type>Checkbox</type>
</CustomField>