force-app/main/default/objects/Exotel_Call_Summary__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Exotel Call Summaries</relationshipLabel>
    <relationshipName>Exotel_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>