force-app/main/default/objects/Exotel_Call_Summary__c/fields/Leads_assigned_to_Dealers__c.field-meta.xml
<CustomField>
    <fullName>Leads_assigned_to_Dealers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leads assigned to Dealers</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Exotel Call Summaries</relationshipLabel>
    <relationshipName>Exotel_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>