force-app/main/default/objects/Exotel_Call_Summary__c/fields/Legs_0_CauseCode__c.field-meta.xml
<CustomField>
    <fullName>Legs_0_CauseCode__c</fullName>
    <label>Legs[0][CauseCode]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>