force-app/main/default/objects/Exotel_Call_Summary__c/fields/Legs_0_Number__c.field-meta.xml
<CustomField>
    <fullName>Legs_0_Number__c</fullName>
    <label>Legs[0][Number]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>