force-app/main/default/objects/Exotel_Call_Summary__c/fields/OutgoingPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>OutgoingPhoneNumber__c</fullName>
    <label>OutgoingPhoneNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>