force-app/main/default/objects/Exotel_Call_Summary__c/fields/RecordingAvailableBy__c.field-meta.xml
<CustomField>
    <fullName>RecordingAvailableBy__c</fullName>
    <label>RecordingAvailableBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>