force-app/main/default/objects/Exotel_Call_Summary__c/fields/RecordingUrl__c.field-meta.xml
<CustomField>
    <fullName>RecordingUrl__c</fullName>
    <label>RecordingUrl</label>
    <type>Url</type>
</CustomField>