force-app/main/default/objects/Exotel_Call_Summary__c/fields/Schedule_Action__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Action__c</fullName>
    <label>Schedule Action</label>
    <type>DateTime</type>
</CustomField>