force-app/main/default/objects/Exotel_Call_Summary__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>StartTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>