force-app/main/default/objects/Exotel_Call_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CallFrom__c</columns>
    <columns>StartTime__c</columns>
    <columns>CallType__c</columns>
    <columns>DialCallStatus__c</columns>
    <columns>DialWhomNumber__c</columns>
    <columns>To__c</columns>
    <columns>OutgoingPhoneNumber__c</columns>
    <columns>From__c</columns>
    <columns>Created__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Leads_assigned_to_Dealers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>